--- a/src/assets/scss/guide.module.scss
+++ b/src/assets/scss/guide.module.scss
@@ -44,7 +44,7 @@ body::-webkit-scrollbar {
   > section ~ section {
     margin-top: 25px;
   }
-  .fold {
+  section:global(.fold) {
     .table {
       height: 0;
       overflow: hidden;
