기간 스타일

--- a/src/assets/scss/_common.scss
+++ b/src/assets/scss/_common.scss
@@ -70,4 +70,13 @@
 	.select {
 		background: red;
 	}
+	.start {
+		background: yellow;
+	}
+	.end {
+		background: yellow;
+	}
+	.current {
+		background: yellow;
+	}
 }
